header and hero section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,24 @@
 
 <body class="basic-font">
     <header class="header">
-        <h1>Fahim.A</h1>
+        <nav>
+            <h2 class="dark1">Fahim.A</h2>
+            <button class="btn-primary">Download Resume</button>
+        </nav>
+
+        <div class="hero">
+            <div class="hero-content">
+                <div>
+                    <img src="./assets/Group.png" alt="Image Loading">
+                </div>
+                
+                <h1 class="hero-title dark1">"In the near future, I hope to become a Developer."</h1>
+                <p class="title-description dark1"> As a developer, I aspire to continuously learn and adapt to new challenges, collaborating with like-minded professionals to bring ideas to life.</p>
+                <button class="btn-hero">Contact with me</button>
+            </div>
+
+        </div>
+        
     </header>
 
     <main>
