--- a/index.html
+++ b/index.html
@@ -32,6 +32,49 @@
     </header>
 
     <main>
+        <section class="whywebdev">
+            <h2 class="section-title">Why Web Development??</h2>
+            <p class="section-description">People who want a creative career path may enjoy web development. They can use their creativity skills to design layouts for pages that are easy and enjoyable to read.</p>
+
+            <div class="layer1">
+                <div class="text">
+                    <h3 class="text-title">I will Do Coding and Change The World</h3>
+                    <p class="text-description">In a world driven by innovation and technology, coding is the key that unlocks endless possibilities. </p>
+                    <button class="btn-secondary">Learn More</button>
+                </div>
+                <div class="image">
+                    <img src="./assets/Layer_1.png" alt="">
+                </div>
+            </div>
+            <div class="layer2">
+                <div class="image">
+                    <img src="./assets/Group 3.png" alt="">
+                </div>
+                <div class="text">
+                    <h3>I will help People by creating Modern Web System</h3>
+                    <p>Creating modern web systems is not just about coding, it's about making a positive impact on people's lives.</p>
+                    <button class="btn-secondary">Learn More</button>
+                </div>
+            </div>
+            <div class="layer3">
+                <div class="text">
+                    <h3 class="text-title">I will Do Coding and Change The World</h3>
+                    <p class="text-description">In a world driven by innovation and technology, coding is the key that unlocks endless possibilities. </p>
+                    <button class="btn-secondary">Learn More</button>
+                </div>
+                <div class="image">
+                    <img src="./assets/Group 4.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section class="inspiration">
+            <div class="text-container">
+                <h2 class="section-title">My Inspiration</h2>
+                <p class="section-description">In the vast world of technology, inspiration often comes from those who have walked the path before us and left a trail of innovation and creativity. My inspiration is a web developer who shows dedication, creativity, and passion.</p>
+            </div>
+            <div></div>
+        </section>
 
     </main>
 
