--- a/index.html
+++ b/index.html
@@ -21,25 +21,28 @@
                 <div>
                     <img src="./assets/Group.png" alt="Image Loading">
                 </div>
-                
+
                 <h1 class="hero-title dark1">"In the near future, I hope to become a Developer."</h1>
-                <p class="title-description dark1"> As a developer, I aspire to continuously learn and adapt to new challenges, collaborating with like-minded professionals to bring ideas to life.</p>
+                <p class="title-description dark1"> As a developer, I aspire to continuously learn and adapt to new
+                    challenges, collaborating with like-minded professionals to bring ideas to life.</p>
                 <button class="btn-hero">Contact with me</button>
             </div>
 
         </div>
-        
+
     </header>
 
     <main>
         <section class="whywebdev">
             <h2 class="section-title">Why Web Development??</h2>
-            <p class="section-description">People who want a creative career path may enjoy web development. They can use their creativity skills to design layouts for pages that are easy and enjoyable to read.</p>
+            <p class="section-description">People who want a creative career path may enjoy web development. They can
+                use their creativity skills to design layouts for pages that are easy and enjoyable to read.</p>
 
             <div class="layer1">
                 <div class="text">
                     <h3 class="text-title">I will Do Coding and Change The World</h3>
-                    <p class="text-description">In a world driven by innovation and technology, coding is the key that unlocks endless possibilities. </p>
+                    <p class="text-description">In a world driven by innovation and technology, coding is the key that
+                        unlocks endless possibilities. </p>
                     <button class="btn-secondary">Learn More</button>
                 </div>
                 <div class="image">
@@ -51,15 +54,17 @@
                     <img src="./assets/Group 3.png" alt="">
                 </div>
                 <div class="text">
-                    <h3>I will help People by creating Modern Web System</h3>
-                    <p>Creating modern web systems is not just about coding, it's about making a positive impact on people's lives.</p>
+                    <h3 class="text-title">I will help People by creating Modern Web System</h3>
+                    <p class="text-description">Creating modern web systems is not just about coding, it's about making
+                        a positive impact on people's lives.</p>
                     <button class="btn-secondary">Learn More</button>
                 </div>
             </div>
             <div class="layer3">
                 <div class="text">
                     <h3 class="text-title">I will Do Coding and Change The World</h3>
-                    <p class="text-description">In a world driven by innovation and technology, coding is the key that unlocks endless possibilities. </p>
+                    <p class="text-description">In a world driven by innovation and technology, coding is the key that
+                        unlocks endless possibilities. </p>
                     <button class="btn-secondary">Learn More</button>
                 </div>
                 <div class="image">
@@ -71,9 +76,36 @@
         <section class="inspiration">
             <div class="text-container">
                 <h2 class="section-title">My Inspiration</h2>
-                <p class="section-description">In the vast world of technology, inspiration often comes from those who have walked the path before us and left a trail of innovation and creativity. My inspiration is a web developer who shows dedication, creativity, and passion.</p>
+                <p class="section-description">In the vast world of technology, inspiration often comes from those who
+                    have walked the path before us and left a trail of innovation and creativity. My inspiration is a
+                    web developer who shows dedication, creativity, and passion.</p>
             </div>
-            <div></div>
+            <div class="video-card">
+                <iframe class="video-item" src="https://www.youtube.com/embed/qz0aGYrrlhU?si=ppgrJ4JjJlGmrYoK"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
+
+        <section class="target-now">
+            <div class="text-container">
+                <h2 class="section-title">My Current Target</h2>
+                <p class="section-description">I am currently focused on mastering HTML, CSS, and JavaScript to build
+                    dynamic and responsive websites. Join me as I enhance my web development skills and create engaging
+                    online experiences.</p>
+            </div>
+
+            <div class="target-card-container">
+                <div class="target-card">
+                    <img src="./assets/html.png" alt="Html logo">
+                    <h4>HTML</h4>
+                    <p>HTML is the standard markup language for Web pages.</p>
+                    <a href="#">Learn More</a>
+                </div>
+
+
+            </div>
         </section>
 
     </main>
