--- a/index.html
+++ b/index.html
@@ -97,13 +97,33 @@
             </div>
 
             <div class="target-card-container">
-                <div class="target-card">
-                    <img src="./assets/html.png" alt="Html logo">
+                <div class="target-card bg-card1">
+
+
+                    <img class="target-logo" src="./assets/html.png" alt="Html logo">
                     <h4>HTML</h4>
                     <p>HTML is the standard markup language for Web pages.</p>
-                    <a href="#">Learn More</a>
+                    <a href="https://www.w3schools.com/html/" target="_blank">Learn More</a>
                 </div>
 
+                <div class="target-card bg-card2 ">
+
+
+                    <img class="target-logo" src="./assets/css.png" alt="Css logo">
+                    <h4>CSS</h4>
+                    <p>CSS (Cascading Style Sheets) is used to style and layout web pages.</p>
+                    <a href="https://www.w3schools.com/css/" target="_blank">Learn More</a>
+                </div>
+
+                <div class="target-card bg-card3">
+
+
+                    <img class="target-logo" src="./assets/js.png" alt="Javascript logo">
+                    <h4>Javascript</h4>
+                    <p>JavaScript is a scripting or programming language that allows you to implement complex features
+                        on web pages.</p>
+                    <a href="https://www.javascript.com/" target="_blank">Learn More</a>
+                </div>
 
             </div>
         </section>
