--- a/index.html
+++ b/index.html
@@ -128,6 +128,62 @@
             </div>
         </section>
 
+        <section class="nextskill">
+            <div class="text-container">
+                <h2 class="section-title">
+                    My Next Target
+                </h2>
+                <p class="section-description">
+                    My next target is to delve into React, Node.js, and MongoDB, enhancing my skills to develop
+                    full-stack web applications. Join me on this journey as I expand my expertise and bring innovative projects to life.
+                </p>
+            </div>
+
+            <div class="skill-container">
+                <div class="skill skill-bg">
+                    <div class="skill-logo">
+                        <img src="./assets/react.png" alt="Html logo">
+                    </div>
+
+                    <div class="skill-text">
+
+                        <h4>ReactJS</h4>
+                        <p>ReactJS is a powerful JavaScript library for building dynamic user interfaces efficiently using a component-based architecture.</p>
+                        <a href="https://react.dev/" target="_blank">Learn More</a>
+                    </div>
+                </div>
+                <div class="skill skill-bg">
+                    <div class="skill-logo">
+                        <img src="./assets/nodejs.png" alt="Html logo">
+                    </div>
+
+                    <div class="skill-text">
+
+                        <h4>NodeJs</h4>
+                        <p>Node.js is a runtime environment that allows JavaScript to be used for server-side development, enabling full-stack JavaScript applications.</p>
+                        <a href="https://nodejs.org/en" target="_blank">Learn More</a>
+                    </div>
+                </div>
+                <div class="skill skill-bg">
+                    <div class="skill-logo">
+                        <img src="./assets/mongodb.png" alt="Html logo">
+                    </div>
+
+                    <div class="skill-text">
+
+                        <h4>MongoDB</h4>
+                        <p>MongoDB is a NoSQL database designed for handling large volumes of unstructured data with high performance and scalability.</p>
+                        <a href="https://nodejs.org/en" target="_blank">Learn More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="support">
+
+        </section>
+
+
     </main>
 
     <footer>
