--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
                 </h2>
                 <p class="section-description">
                     My next target is to delve into React, Node.js, and MongoDB, enhancing my skills to develop
-                    full-stack web applications. Join me on this journey as I expand my expertise and bring innovative projects to life.
+                    full-stack web applications. Join me on this journey as I expand my expertise and bring innovative
+                    projects to life.
                 </p>
             </div>
 
@@ -148,7 +149,8 @@
                     <div class="skill-text">
 
                         <h4>ReactJS</h4>
-                        <p>ReactJS is a powerful JavaScript library for building dynamic user interfaces efficiently using a component-based architecture.</p>
+                        <p>ReactJS is a powerful JavaScript library for building dynamic user interfaces efficiently
+                            using a component-based architecture.</p>
                         <a href="https://react.dev/" target="_blank">Learn More</a>
                     </div>
                 </div>
@@ -160,7 +162,8 @@
                     <div class="skill-text">
 
                         <h4>NodeJs</h4>
-                        <p>Node.js is a runtime environment that allows JavaScript to be used for server-side development, enabling full-stack JavaScript applications.</p>
+                        <p>Node.js is a runtime environment that allows JavaScript to be used for server-side
+                            development, enabling full-stack JavaScript applications.</p>
                         <a href="https://nodejs.org/en" target="_blank">Learn More</a>
                     </div>
                 </div>
@@ -172,7 +175,8 @@
                     <div class="skill-text">
 
                         <h4>MongoDB</h4>
-                        <p>MongoDB is a NoSQL database designed for handling large volumes of unstructured data with high performance and scalability.</p>
+                        <p>MongoDB is a NoSQL database designed for handling large volumes of unstructured data with
+                            high performance and scalability.</p>
                         <a href="https://nodejs.org/en" target="_blank">Learn More</a>
                     </div>
                 </div>
@@ -180,7 +184,19 @@
         </section>
 
         <section class="support">
+            <div class="support-container">
+                <h2 class="support-title">I need Support</h2>
+                <p class="support-description">Please fill out the form below to provide your valuable feedback.</p>
 
+                <form action="">
+
+                    <input class="feedback-input" type="text" name="" id="" placeholder="Suggest me any feedback for me">
+
+
+                    <input class="btn-support" type="submit" value="Submit">
+
+                </form>
+            </div>
         </section>
 
 
