--- a/index.html
+++ b/index.html
@@ -203,6 +203,19 @@
     </main>
 
     <footer>
+        <div class="footer-container">
+            <h2 class="foot-text">An Open Commitment by Fahim Prito</h2>
+
+            <div class="social-icon">
+                <a href="https://www.facebook.com/" target="_blank"><img src="./assets/facebook.png" alt="Facebook"></a>
+
+                <a href="https://github.com/fahimprito" target="_blank"><img src="./assets/github.png" alt="Github"></a>
+
+                <a href="https://www.linkedin.com/in/fahimprito/" target="_blank"><img src="./assets/linkedin-icon 1.png" alt="linkedin"></a>
+
+                
+            </div>
+        </div>
 
     </footer>
 </body>
