--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 <h1 class="hero-title dark1">"In the near future, I hope to become a Developer."</h1>
                 <p class="title-description dark1"> As a developer, I aspire to continuously learn and adapt to new
                     challenges, collaborating with like-minded professionals to bring ideas to life.</p>
-                <button class="btn-hero">Contact with me</button>
+                <!-- <button class="btn-hero">Contact with me</button> -->
+                <a href="#footer" class="btn-hero">Contact with me</a>
             </div>
 
         </div>
@@ -43,7 +44,9 @@
                     <h3 class="text-title">I will Do Coding and Change The World</h3>
                     <p class="text-description">In a world driven by innovation and technology, coding is the key that
                         unlocks endless possibilities. </p>
-                    <button class="btn-secondary">Learn More</button>
+                    <!-- <button class="btn-secondary">Learn More</button> -->
+                    <a href="https://www.nextacademy.com/blog/12-ways-can-change-world-code/" target="_blank"
+                        class="btn-secondary">Learn More</a>
                 </div>
                 <div class="image">
                     <img src="./assets/Layer_1.png" alt="">
@@ -57,7 +60,8 @@
                     <h3 class="text-title">I will help People by creating Modern Web System</h3>
                     <p class="text-description">Creating modern web systems is not just about coding, it's about making
                         a positive impact on people's lives.</p>
-                    <button class="btn-secondary">Learn More</button>
+                    <a href="https://www.nextacademy.com/blog/12-ways-can-change-world-code/" target="_blank"
+                        class="btn-secondary">Learn More</a>
                 </div>
             </div>
             <div class="layer3">
@@ -65,7 +69,8 @@
                     <h3 class="text-title">I will Do Coding and Change The World</h3>
                     <p class="text-description">In a world driven by innovation and technology, coding is the key that
                         unlocks endless possibilities. </p>
-                    <button class="btn-secondary">Learn More</button>
+                    <a href="https://www.nextacademy.com/blog/12-ways-can-change-world-code/" target="_blank"
+                        class="btn-secondary">Learn More</a>
                 </div>
                 <div class="image">
                     <img src="./assets/Group 4.png" alt="">
@@ -120,7 +125,7 @@
 
                     <img class="target-logo" src="./assets/js.png" alt="Javascript logo">
                     <h4>Javascript</h4>
-                    <p>JavaScript is a scripting or programming language that allows you to implement complex features
+                    <p>JavaScript is a programming language that allows you to implement complex features
                         on web pages.</p>
                     <a href="https://www.javascript.com/" target="_blank">Learn More</a>
                 </div>
@@ -190,7 +195,8 @@
 
                 <form action="">
 
-                    <input class="feedback-input" type="text" name="" id="" placeholder="Suggest me any feedback for me">
+                    <input class="feedback-input" type="text" name="" id=""
+                        placeholder="Suggest me any feedback for me">
 
 
                     <input class="btn-support" type="submit" value="Submit">
@@ -202,7 +208,7 @@
 
     </main>
 
-    <footer>
+    <footer id="footer">
         <div class="footer-container">
             <h2 class="foot-text">An Open Commitment by Fahim Prito</h2>
 
@@ -211,9 +217,10 @@
 
                 <a href="https://github.com/fahimprito" target="_blank"><img src="./assets/github.png" alt="Github"></a>
 
-                <a href="https://www.linkedin.com/in/fahimprito/" target="_blank"><img src="./assets/linkedin-icon 1.png" alt="linkedin"></a>
+                <a href="https://www.linkedin.com/in/fahimprito/" target="_blank"><img
+                        src="./assets/linkedin-icon 1.png" alt="linkedin"></a>
 
-                
+
             </div>
         </div>
 
