--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         <h4>MongoDB</h4>
                         <p>MongoDB is a NoSQL database designed for handling large volumes of unstructured data with
                             high performance and scalability.</p>
-                        <a href="https://nodejs.org/en" target="_blank">Learn More</a>
+                        <a href="https://www.mongodb.com/" target="_blank">Learn More</a>
                     </div>
                 </div>
             </div>
